Ajout du template d'Application utilisant Java 11 et la JEP 330